--- a/company.html
+++ b/company.html
@@ -55,7 +55,9 @@
             </ul>
 
           </div>
-         
+          </div>
+          </div>
+          </div>
     </header>
   
   <div id="cover_area">
